--- a/explore.html
+++ b/explore.html
@@ -115,6 +115,38 @@
       </div>
     </section> -->
 
+    <div class="contact" id="contact">
+      <h2 class="text-centre">Contact Us</h2>
+      <div class="form">
+        <input
+          class="form-input"
+          type="text"
+          id="name"
+          placeholder="Enter your name"
+        />
+        <input
+          class="form-input"
+          type="email"
+          id="email"
+          placeholder="Enter your email"
+        />
+        <input
+          class="form-input"
+          type="text"
+          id="phone no."
+          placeholder="Enter your phone no."
+        />
+        <textarea
+          class="form-input"
+          name="text"
+          id="text"
+          cols="30"
+          rows="10"
+          placeholder="Elaborate your concerns"
+        ></textarea>
+        <button class="btn btn-dark">Submit</button>
+      </div>
+    </div>
     <footer class="text-footer background">
       <p>Copyright &copy; www.galaxia.com-All rights reserved</p>
     </footer>
