--- a/explore.html
+++ b/explore.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/responsive.css" />
 
-    <title>Explore</title>
+    <title>Explore Universe</title>
   </head>
   <body>
     <nav class="navbar background h-nav-resp">
